# mcp-server-polarion

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.claude/: settings.json
.claude/hooks/: validate-pr-body.py  validate-pr-merge.py  validate_pr_body.py  validate_pr_merge.py
.claude/skills/compress-code-comments/: SKILL.md
.claude/skills/compress-code-comments/evals/: evals.json
.claude/skills/compress-code-comments/evals/files/: case1_client.py  case2_tool.py  case3_payload.py
.claude/skills/compress-code-comments/references/: google-comment-style.md
.claude/skills/compress-code-comments/scripts/: assert_comment_only.py
.claude/skills/deploy/: SKILL.md
.claude/skills/shrink-mcp-tool-docs/: SKILL.md
.claude/skills/shrink-mcp-tool-docs/scripts/: dump_schema.py
.claude/skills/shrink-tool-descriptions/: SKILL.md
.githooks/: commit-msg
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/run-evals/: action.yml
.github/release-notes/: README.md
.github/scripts/: build_release_notes.py  mcp_scan_summary.py
.github/skills/pr_review_reflector/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  evals-on-demand.yml  evals.yml  label-pr.yml  publish-gate.yml  publish.yml  security-scan.yml
evals/: README.md  __init__.py  run.py
evals/cases/: __init__.py  efficiency.py  orchestration.py  safety.py  tier1_prohibitions.py  tier2_efficiency.py  tier3_orchestration.py  triggers.py
evals/evaluators/: __init__.py  checks.py  dispatch.py  tier1.py
evals/harness/: __init__.py  fake_polarion.py  fixtures.py  mcp_bridge.py  model.py  runner.py
src/mcp_server_polarion/: __init__.py  __main__.py  middleware.py  models.py  server.py
src/mcp_server_polarion/core/: __init__.py  client.py  config.py  exceptions.py  global_pace.py  logging.py
src/mcp_server_polarion/models/: __init__.py  comments.py  common.py  documents.py  enum.py  links.py  projects.py  test_runs.py  work_items.py
src/mcp_server_polarion/tools/: __init__.py  _cache.py  _enum_guard.py  _guard.py  _helpers.py  comments.py  documents.py  enum.py  links.py  moves.py  projects.py  read.py  test_runs.py  work_items.py  write.py
src/mcp_server_polarion/tools/_shared/: __init__.py  cache.py  custom_fields.py  fields.py  guard.py  helpers.py  pagination.py  parse.py  sql.py
src/mcp_server_polarion/tools/guides/: sql_query_recipes.md
src/mcp_server_polarion/utils/: __init__.py  html.py
tests/: __init__.py  conftest.py  test_build_release_notes.py  test_claude_hooks.py  test_main.py  test_mcp_transport.py  test_models.py  test_server.py
tests/claude_hooks/: __init__.py  test_validate_pr_body.py  test_validate_pr_merge.py
tests/core/: test_client.py  test_config.py  test_exceptions.py
tests/evals/: __init__.py  test_checks.py  test_coverage.py  test_run.py
tests/evals/cases/: __init__.py  test_efficiency.py  test_orchestration.py  test_safety.py  test_tier1_prohibitions.py  test_tier2_efficiency.py  test_tier3_orchestration.py  test_triggers.py
tests/evals/evaluators/: __init__.py  test_checks.py  test_dispatch.py  test_tier1.py
tests/evals/harness/: __init__.py  test_fake_polarion.py  test_fixtures.py  test_mcp_bridge.py  test_model.py  test_runner.py
tests/github_scripts/: __init__.py  test_build_release_notes.py  test_mcp_scan_summary.py
tests/mcp_server_polarion/: __init__.py  test_mcp_transport.py  test_middleware.py
tests/mcp_server_polarion/core/: __init__.py  test_client.py  test_exceptions.py  test_global_pace.py  test_logging.py
tests/mcp_server_polarion/models/: test_comments.py  test_common.py  test_documents.py  test_enum.py  test_invariants.py  test_links.py  test_projects.py  test_work_items.py
tests/mcp_server_polarion/tools/: __init__.py  conftest.py  test_comments.py  test_documents.py  test_enum.py  test_links.py  test_moves.py  test_path_encoding.py  test_projects.py  test_read.py  test_test_runs.py  test_tool_annotations.py  test_work_items.py  test_write.py
tests/mcp_server_polarion/tools/_shared/: test_cache.py  test_custom_fields.py  test_guard.py  test_helpers.py  test_pagination.py  test_parse.py  test_sql.py
tests/mcp_server_polarion/utils/: __init__.py  test_html.py
tests/tools/: test_cache.py  test_enum_guard.py  test_guard.py  test_helpers.py  test_read.py  test_write.py
tests/utils/: test_html.py
