[project]
name = "mcp-server-polarion"
version = "1.2.0"
description = "MCP server for Polarion ALM — read and write documents and work items"
readme = "README.md"
authors = [{ name = "devemberx", email = "devemberx@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "polarion", "alm", "model-context-protocol", "fastmcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0,<4",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "markdownify>=1.2.2",
    "markdown-it-py>=4.0.0",
]

[project.urls]
Repository = "https://github.com/devemberx/mcp-server-polarion"
Issues = "https://github.com/devemberx/mcp-server-polarion/issues"

[project.scripts]
mcp-server-polarion = "mcp_server_polarion.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.15",
    "mypy>=2.0",
]
evals = [
    "strands-agents[litellm]",
    "strands-agents-evals",
    "litellm>=1.83.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_polarion"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN", "PL", "C4", "PTH", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PLR", "S101", "S105", "S106"]
# The eval harness drives third-party agent/LLM types (lots of `Any`) and is
# not shipped in the wheel; relax the same rules tests get.
"evals/**" = ["ANN", "PLR", "S101", "S105", "S106", "S603", "S607", "E402"]
# Claude Code PreToolUse hooks: local tooling scripts, not shipped in the wheel.
".claude/hooks/**" = ["PLR"]
# Release-notes CI helper: shells out to `gh`, not shipped in the wheel.
".github/scripts/**" = ["S603", "S607"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
files = ["src/mcp_server_polarion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
